tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@int_invalid_base.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
assertion_line: 194
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/int_invalid_base.txt
---
error: int filter `base` must be between 2 and 36, got 1
 --> int_invalid_base.txt:1:10
  |
1 | {{ "10" | int(base=1) }}
  |           ^^^^^^^^^^^
